adding legal and privacy protection

--- a/cake-planner-frontend/projects/user-app/src/index.html
+++ b/cake-planner-frontend/projects/user-app/src/index.html
@@ -1,17 +1,68 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>UserApp</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="manifest" href="manifest.webmanifest">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
-<body>
-  <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
-</body>
+<html lang="de">
+  <head>
+    <meta charset="utf-8" />
+    <title>Cake Planner - The sweetest way to organize your cake events.</title>
+    <base href="/" />
+
+    <meta
+      name="description"
+      content="Cake Planner - The sweetest way to organize your cake events within your team."
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+
+    <meta
+      name="keywords"
+      content="Cake Planner, sweet team events, cake events, team events, cake planning, team planning, cake management, ZHENG Robert, Robert Zheng, ZHENG Bote, 郑 伯特"
+    />
+    <meta name="author" content="Zheng Robert" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#3f51b5" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="manifest" href="manifest.webmanifest" />
+
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Cake Planner - The sweetest way to organize your cake events."
+    />
+    <meta
+      property="og:description"
+      content="Cake Planner - The sweetest way to organize your cake events within your team."
+    />
+    <meta property="og:site_name" content="Cake Planner" />
+    <meta property="og:url" content="https://cake-planner.digidocu.dev/" />
+    <meta property="og:image" content="https://cake-planner.digidocu.dev/assets/logo_500x500.png" />
+    <meta
+      property="og:image:alt"
+      content="Cake Planner - The sweetest way to organize your cake events within your team."
+    />
+    <meta property="og:locale" content="de_DE" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Cake Planner - The sweetest way to organize your cake events within your team."
+    />
+    <meta
+      name="twitter:description"
+      content="Cake Planner - The sweetest way to organize your cake events within your team."
+    />
+    <meta
+      name="twitter:image"
+      content="https://cake-planner.digidocu.dev/assets/logo_500x500.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  </head>
+  <body>
+    <app-root>Loading...</app-root>
+    <noscript>Please enable JavaScript to continue using this application.</noscript>
+  </body>
 </html>
