--- a/theme/desktop/template.html
+++ b/theme/desktop/template.html
@@ -1,20 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>GHP | {{ title }}</title>
+    <title>CakePlanner | {{ title }}</title>
 
-    <link
-      rel="shortcut icon"
-      href="{{ base_path }}assets/favicon.ico"
-      type="image/x-icon"
-    />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="{{ base_path }}assets/img/favicon.svg"
-    />
+    <link rel="shortcut icon" href="{{ base_path }}assets/favicon.ico" type="image/x-icon" />
+    <link rel="icon" type="image/svg+xml" href="{{ base_path }}assets/img/favicon.svg" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Inter:wght@300;500&display=swap"
@@ -25,11 +17,7 @@
   <body>
     <header>
       <div class="header_left">
-        <img
-          src="{{ base_path }}assets/img/favicon.svg"
-          alt="Logo"
-          loading="eager"
-        />
+        <img src="{{ base_path }}assets/img/favicon.svg" alt="Logo" loading="eager" />
         <h1>GHP</h1>
       </div>
       <div class="header_middle">
@@ -53,6 +41,6 @@
       <div class="footer-section_right">CLEARANCE_LEVEL: 5</div>
     </footer>
 
-    <script src="{{base_path}}assets/js/main.js" defer></script>
+    <script src="{{ base_path }}assets/js/main.js" defer></script>
   </body>
 </html>
