--- a/theme/desktop/template.html
+++ b/theme/desktop/template.html
@@ -18,7 +18,7 @@
     <header>
       <div class="header_left">
         <img src="{{ base_path }}assets/img/favicon.svg" alt="Logo" loading="eager" />
-        <h1>GHP</h1>
+        <h1>CakePlanner</h1>
       </div>
       <div class="header_middle">
         <span>System Status: Active</span>
