--- a/theme/desktop/template.html
+++ b/theme/desktop/template.html
@@ -21,7 +21,7 @@
         <h1>CakePlanner</h1>
       </div>
       <div class="header_middle">
-        <span>&nbsp;</span>
+        <span>Frontends</span>
       </div>
       <div class="header_right">
         <label class="theme-switch" for="checkbox" title="Switch Light/Dark Mode">
