feat: adding social media

--- a/projects/user-app/src/index.html
+++ b/projects/user-app/src/index.html
@@ -2,23 +2,26 @@
 <html lang="de">
   <head>
     <meta charset="utf-8" />
-    <title>Cake Planner - The sweetest way to organize your cake events.</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <base href="/" />
+
+    <title>Cake Planner - The sweetest way to organize your cake events.</title>
 
     <meta
       name="description"
       content="Cake Planner - The sweetest way to organize your cake events within your team."
     />
-    <meta name="robots" content="index, follow" />
-    <meta name="googlebot" content="index, follow" />
-
     <meta
       name="keywords"
       content="Cake Planner, sweet team events, cake events, team events, cake planning, team planning, cake management, ZHENG Robert, Robert Zheng, ZHENG Bote, 郑 伯特"
     />
     <meta name="author" content="Zheng Robert" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#3f51b5" />
+
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+
+    <meta name="color-scheme" content="light dark" />
+
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.webmanifest" />
 
