feat: adding social media

--- a/theme/desktop/template.html
+++ b/theme/desktop/template.html
@@ -71,7 +71,7 @@
         <span>Frontends</span>
       </div>
       <div class="header_right">
-        <button id="share-btn" class="tron-btn icon-only" title="Share" style="display: none">
+        <button id="share-btn" class="tron-btn icon-only" title="Share">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="18"
